# testcli

./: README.md  pig-0.1.0-py3-none-any.whl  pyproject.toml
pig/: __main__.py  pig.py  test_module.py
pig/config/: .env  service-account-file.json  service-account-file.json.bak
tests/: test_pig.py
